feat(repository): 공유 여부(isShared)에 따른 레포지토리 조회 쿼리 수정 DP-104